fix: replace html truncation with a webkit-only css feature to do multiline ellipsis overflow

--- a/ui/less/com/msg-list/card.less
+++ b/ui/less/com/msg-list/card.less
@@ -141,6 +141,11 @@
     padding: 7px;
     a {
       color: gray;
+      overflow : hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     div:last-child {
       font-weight: 300;
