--- a/ui/less/com/msg-list/notification.less
+++ b/ui/less/com/msg-list/notification.less
@@ -23,7 +23,11 @@
       color: #000;
     }
     .subject {
-      display: block;
+      overflow : hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     div:last-child {
       font-weight: 300;
